front end initialize

--- a/src/app/acceuil-content/acceuil-content.component.scss
+++ b/src/app/acceuil-content/acceuil-content.component.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Dosis;
-  src: url("/src/assets/fonts/Dosis-VariableFont_wght.ttf") format("opentype");
+ // src: url("/src/assets/fonts/Dosis-VariableFont_wght.ttf") format("opentype");
 }
 
 .section{
