--- a/src/app/EspacePatient/login-patient/login-patient.component.html
+++ b/src/app/EspacePatient/login-patient/login-patient.component.html
@@ -1,1 +1,12 @@
-<p>login-patient works!</p>
+<app-header></app-header>
+
+<div class="container">
+  <div class="inputs">
+    <label>EMAIL</label>
+    <input type="email" placeholder="example@test.com" />
+    <label>PASSWORD</label>
+    <input type="password" placeholder="Min 6 charaters long" />
+    <button type="submit">LOGIN</button>
+  </div>
+  <a href="https://twitter.com/prathkum">MADE BY PRATHAM</a>
+</div>
