--- a/src/app/acceuil-content/acceuil-content.component.scss
+++ b/src/app/acceuil-content/acceuil-content.component.scss
@@ -3,6 +3,7 @@
  // src: url("/src/assets/fonts/Dosis-VariableFont_wght.ttf") format("opentype");
 }
 
+
 .section{
   margin-top: -4rem;
   height: 43rem;
@@ -61,7 +62,6 @@
   justify-content: center;
   border: none;
   box-sizing: content-box !important;
-
 
 }
 .section2 h1{
@@ -193,4 +193,5 @@
 }
 .divbtn{
   margin-bottom: 3rem;
+  border: none;
 }
