--- a/src/app/composants/footer/footer.component.html
+++ b/src/app/composants/footer/footer.component.html
@@ -19,9 +19,12 @@
         </ul>
       </div>
     </div>
-    <div class="card contentSejours" >
+   <!--- <div class="card contentSejours" >
       <h4>Séjours Médicale</h4>
-    </div>
+    </div>-->
+  </div>
+  <div style="width:100% ; background-color:#EAF9F8; height: 4rem; text-align: center; padding: 1rem">
+    <p style="color: #001B35; ">Made with  &#10084;&#65039; by	 Hadil Hammami   All Rights reserved © 2023.</p>
   </div>
 </footer>
 
