--- a/src/app/composants/header/header.component.html
+++ b/src/app/composants/header/header.component.html
@@ -1,30 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important; width: 100%">
-  <a class="navbar-brand" href="#">MTT</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important; width: 100%; ">
+  <div class="image">
+    <img src="../assets/image/848.jpg">
+  </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto " style="justify-content: space-between" >
-      <li class="nav-item active">
-        <a class="nav-link" href="#" >Acceuil <span class="sr-only">(current)</span></a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+    <ul class="navbar-nav  " style="justify-content: space-between !important; padding-left:4rem" >
+      <li class="nav-item active " style="margin-left: 2rem">
+        <a class="nav-link" href="">Acceuil </a>
       </li>
 
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown " style="margin-left: 4rem">
         <a class="nav-link dropdown-toggle" href="#" style="color: #001B35 ;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Services
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/chirurgie">Chirurgies</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/sejours">Séjours</a>
+
         </div>
       </li>
-       <li class="nav-item active">
-         <a class="nav-link" href="#">A Propos <span class="sr-only">(current)</span></a>
+       <li class="nav-item active " style="margin-left: 4rem">
+         <a class="nav-link" href="">A Propos </a>
        </li>
 
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown " style="margin-left: 13rem">
         <a class="nav-link dropdown-toggle" href="#" style="color: #001B35 ;" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Espace Médecin
         </a>
