--- a/src/app/servicePatient/sejours/sejours.component.html
+++ b/src/app/servicePatient/sejours/sejours.component.html
@@ -1,1 +1,90 @@
-<p>sejours works!</p>
+<div class="card all-card">
+  <h1>Nos Services de séjour</h1>
+  <div class="card align-content-center one-card" style="margin-top: 1rem"  >
+    <h4>Clinique CARTHAGENE</h4>
+    <div class="row align-content-center content-info">
+      <div class="image">
+        <img src='../assets/image/clinique.jpg'>
+      </div>
+      <div class="content" >
+
+        <p><b> Activités :</b> PLURIDISCIPLINAIRE</p>
+       <p> <b>  Adresse : </b>Le centre hospitalier international Carthagène est
+       <p>  situé au Centre Urbain Nord 1082 Tunis, Tunisie</p>
+        <p><b>Tél : </b>(+216) 31 336 336 – (+216) 31 336 355 – (+216) 58 520 023 – (+216) 58 520 500</p>
+       <p> <b>Fax :</b> (+216) 31 373 373</p>
+       <p> <b>Site Web : </b> https://carthagene.tn</p>
+      </div>
+
+    </div>
+    <div class="btn">
+      <button>Reserver clinique</button>
+    </div>
+  </div>
+
+  <div class="card align-content-center one-card" style="margin-top: 1rem"  >
+    <h4>Clinique RIDHA MRAD</h4>
+    <div class="row align-content-center content-info">
+
+      <div class="content" >
+        <p><b> Activités :</b> PLURIDISCIPLINAIRE</p>
+        <p> <b>  Adresse : </b>Le centre hospitalier international Carthagène est
+        <p> situé au Centre Urbain Nord 1082 Tunis, Tunisie</p>
+        <p><b>Tél : </b>(+216) 31 336 336 – (+216) 31 336 355 – (+216) 58 520 023 – (+216) 58 520 500</p>
+        <p> <b>Fax :</b> (+216) 31 373 373</p>
+        <p> <b>Site Web : </b> https://carthagene.tn</p>
+      </div>
+      <div class="image">
+      <img src='../assets/image/AdobeStock_172745118_Preview.jpeg'>
+    </div>
+
+    </div>
+    <div class="btn">
+      <button>Reserver clinique</button>
+    </div>
+  </div>
+
+  <div class="card align-content-center one-card" style="margin-top: 1rem"  >
+    <h4>Clinique CARTHAGENE</h4>
+    <div class="row align-content-center content-info">
+      <div class="image">
+        <img src='../assets/image/AdobeStock_108994535_Preview.jpeg'>
+      </div>
+      <div class="content" >
+
+        <p><b> Activités :</b> PLURIDISCIPLINAIRE</p>
+        <p> <b>  Adresse : </b>Le centre hospitalier international Carthagène est
+         <p> situé au Centre Urbain Nord 1082 Tunis, Tunisie</p>
+        <p><b>Tél : </b>(+216) 31 336 336 – (+216) 31 336 355 – (+216) 58 520 023 – (+216) 58 520 500</p>
+        <p> <b>Fax :</b> (+216) 31 373 373</p>
+        <p> <b>Site Web : </b> https://carthagene.tn</p>
+      </div>
+
+    </div>
+    <div class="btn">
+      <button>Reserver clinique</button>
+    </div>
+  </div>
+
+  <div class="card align-content-center one-card" style="margin-top: 1rem ; margin-bottom: 2rem"  >
+    <h4>Clinique RIDHA MRAD</h4>
+    <div class="row align-content-center content-info">
+
+      <div class="content" >
+        <p><b> Activités :</b> PLURIDISCIPLINAIRE</p>
+        <p> <b>  Adresse : </b>Le centre hospitalier international Carthagène est
+        <p> situé au Centre Urbain Nord 1082 Tunis, Tunisie</p>
+        <p><b>Tél : </b>(+216) 31 336 336 – (+216) 31 336 355 – (+216) 58 520 023 – (+216) 58 520 500</p>
+        <p> <b>Fax :</b> (+216) 31 373 373</p>
+        <p> <b>Site Web : </b> https://carthagene.tn</p>
+      </div>
+      <div class="image">
+        <img src='../assets/image/AdobeStock_266136695_Preview.jpeg'>
+      </div>
+
+    </div>
+    <div class="btn">
+      <button>Reserver clinique</button>
+    </div>
+  </div>
+</div>
