--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
 body{
-  font-family: dosis;
+  font-family: Open Sans !important;
   color: #001B35 !important;
 }
 a:hover{
