--- a/src/app/EspaceMedecin/inscrire/inscrire.component.html
+++ b/src/app/EspaceMedecin/inscrire/inscrire.component.html
@@ -1,1 +1,74 @@
-<p>inscrire works!</p>
+<div class="card all-content">
+  <div class="zoneRouge">
+    <h6>Cette inscription et seulement pour les medecins  ! </h6>
+  </div>
+ <h3 style="margin-top: 3rem;">Inscription</h3>
+<div class="card-form">
+  <form>
+    <h5>Information Personnelle :</h5>
+    <div class="form-row " style="justify-content: center;">
+
+      <div class="form-group col-md-4 " >
+        <label for="inputEmail4" >Nom</label>
+        <input type="text" class="form-control" id="inputEmail4" placeholder="Nom">
+      </div>
+      <div class="form-group col-md-4" style="justify-content: center;">
+        <label for="inputPassword4">Prénom</label>
+        <input type="text" class="form-control" id="inputPassword4" placeholder="Prénom">
+      </div>
+    </div>
+    <div class="form-row " style="justify-content: center;">
+    <div class="form-group col-md-4" >
+      <label for="inputAddress">Ville</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="ville">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputAddress2">Address</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="">
+    </div>
+    </div>
+    <div class="form-row" style="justify-content: center;">
+      <div class="form-group col-md-4">
+        <label for="telephone">Téléphone</label>
+        <input type="text" class="form-control" id="telephone">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="inputCity">Email</label>
+        <input type="text" class="form-control" id="inputCity">
+      </div>
+    </div>
+      <div class="form-row" style="justify-content: center;">
+      <div class="form-group col-md-4" >
+        <label for="pass">Password</label>
+        <input type="password" class="form-control" id="pass">
+      </div>
+      </div>
+
+    <h5 style="margin-top: 1rem">Information Professionnelle :</h5>
+    <div class="form-row " style="justify-content: center;">
+      <div class="form-group col-md-4 " >
+        <label for="inputEmail8" >Specialité</label>
+        <input type="text" class="form-control" id="inputEmail8" placeholder="">
+      </div>
+      <div class="form-group col-md-4" style="justify-content: center;">
+        <label for="inputPassword9">Etablissement</label>
+        <input type="text" class="form-control" id="inputPassword9" placeholder="">
+      </div>
+    </div>
+    <div class="form-row " style="justify-content: center;">
+      <div class="form-group col-md-4 " >
+        <label for="inputEmail10" >Clinique</label>
+        <input type="text" class="form-control" id="inputEmail10" placeholder="">
+      </div>
+      <div class="form-group col-md-4" style="justify-content: center;">
+        <label for="inputPassword12">Parcours</label>
+        <input type="text" class="form-control" id="inputPassword12" placeholder="">
+      </div>
+    </div>
+
+    <div class="btn">
+    <button type="submit" class="btn">Inscrire</button>
+    </div>
+  </form>
+</div>
+</div>
