--- a/src/app/EspaceMedecin/profile-medecin/profile-medecin.component.html
+++ b/src/app/EspaceMedecin/profile-medecin/profile-medecin.component.html
@@ -1,1 +1,40 @@
-<p>profile-medecin works!</p>
+
+
+<div class="main-container">
+  <span class="openNav"  id="openbtn" style="font-size:30px;cursor:pointer ; display: none" (click)="openNav()">&#9776;</span>
+  <span class="closebtn" (click)="closeNav()" id="closebtn" style="display: none !important;">&times;</span>
+  <div class="row min-height-600 no-flex-wrap" >
+
+    <div class="card col-md-2  mr-2 leftCard" style="margin-top: 0.5rem" id="Sidenav" >
+
+      <div class="col">
+        <div class="image">
+          <img src="../assets/image/medcin4.jfif">
+        </div>
+        <h5 style="margin-top: 1rem">Dr Ben Hassen</h5>
+        <h6>Chirurgie des valves cardiaque</h6>
+        <div>
+         <ul>
+           <li><a href="show"><i class="bi bi-person-fill" style="color: white; margin-right: 0.5rem"></i>Profile</a></li>
+           <li><a href="messagesM"><i class="bi bi-envelope-fill" style="color: white; margin-right: 0.5rem"></i>Messages</a></li>
+           <li><a href="dashboardMed"><i class="bi bi-pie-chart-fill" style="color: white; margin-right: 0.5rem"></i>Dashboard</a></li>
+           <li><a href="parametreMed"><i class="bi bi-gear-fill" style="color: white; margin-right: 0.5rem"></i>Paramètres</a></li>
+           <li style="margin-top: 5rem"><a href=""><i class="bi bi-box-arrow-left" style="color: white; margin-right:5px"></i>Déconnexion</a></li>
+         </ul>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="card col-md-10 pl-0 pr-0 background-grey border-no main-content"   >
+
+        <div class="card min-height-480
+        mb-2 mt-2 " style="background-color: #FBFBFB">
+          <router-outlet></router-outlet>
+
+        </div>
+
+    </div>
+  </div>
+</div>
+
