--- a/src/app/acceuil-content/acceuil-content.component.html
+++ b/src/app/acceuil-content/acceuil-content.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container-fluid section">
   <div class="container-fluid doctorBg">
     <img src="../assets/image/bcgdoctor.png">
@@ -47,7 +48,5 @@
    <p> de votre séjour médical en Tunisie, pour votre type de chirurgie </p>
 
 </div>
-  <div class="divbtn">
-  <button>Voir Plus</button>
-</div>
+
 </div>
