--- a/src/app/EspaceMedecin/authentifier/authentifier.component.html
+++ b/src/app/EspaceMedecin/authentifier/authentifier.component.html
@@ -23,12 +23,12 @@
          </div>
        </div>
 
-       <a href="" style="color: #0066FF; margin-left: 8rem; margin-top: 2rem !important;">Mot de passe oublié </a>
+       <a href="" style="color: #0066FF; margin-left: 8rem; margin-top: 3rem !important;"  routerLink="/resetPassword" routerLinkActive="active">Mot de passe oublié </a>
        <div class="btn">
-         <button type="submit" class="btn">Connexion</button>
+         <button type="submit" class="btn" routerLink="/showProfileMedecin" routerLinkActive="active">Connexion</button>
        </div>
        <div class="btn2">
-         <button class="btn">Inscription</button>
+         <button class="btn" routerLink="/inscrire" routerLinkActive="active">Inscription</button>
        </div>
      </form>
 
