--- a/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
+++ b/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
@@ -41,26 +41,26 @@
             <h2 class="padding-bottom--15">Inscrire</h2>
             <form id="stripe-login">
               <div class="field padding-bottom--24">
-                <label for="nom">Nom</label>
-                <input type="text" name="nom">
+                <label >Nom</label>
+                <input type="text" >
               </div>
               <div class="field padding-bottom--24">
-                <label for="prenom">Prénom</label>
-                <input type="text" name="prenom">
+                <label >Prénom</label>
+                <input type="text" >
               </div>
               <div class="field padding-bottom--24">
-                <label for="email">Email</label>
-                <input type="email" name="email">
+                <label >Email</label>
+                <input type="email" >
               </div>
               <div class="field padding-bottom--24">
                 <div class="grid--50-50">
-                  <label for="password">Password</label>
+                  <label >Password</label>
                 </div>
-                <input type="password" name="password">
+                <input type="password" >
               </div>
 
               <div class="field padding-bottom--24 btn">
-              <button onclick="window.location.href ='loginPatient'">Inscrire</button>
+              <button routerLink="/loginPatient" routerLinkActive="active" >Inscrire</button>
               </div>
 
             </form>
