--- a/src/app/EspaceMedecin/inscrire/inscrire.component.html
+++ b/src/app/EspaceMedecin/inscrire/inscrire.component.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="btn">
-    <button type="submit" class="btn">Inscrire</button>
+    <button type="submit" class="btn"  routerLink="/authentifier" routerLinkActive="active">Inscrire</button>
     </div>
   </form>
 </div>
