--- a/src/app/EspacePatient/login-patient/login-patient.component.html
+++ b/src/app/EspacePatient/login-patient/login-patient.component.html
@@ -6,7 +6,10 @@
     <input type="email" placeholder="example@test.com" />
     <label>PASSWORD</label>
     <input type="password" placeholder="Min 6 charaters long" />
-    <button type="submit">LOGIN</button>
+    <a href="" style="color: #0066FF; margin-left: 8rem; margin-top: 2rem !important;"  routerLink="/resetPassword" routerLinkActive="active">Mot de passe oublié </a>
+
+    <button type="submit" routerLink="/formuleRndv" routerLinkActive="active">Connnexion</button>
+    <button type="submit" class="btn2"  routerLink="/signPatient" routerLinkActive="active">Inscrire</button>
   </div>
-  <a href="https://twitter.com/prathkum">MADE BY PRATHAM</a>
+
 </div>
