--- a/src/app/EspacePatient/login-patient/login-patient.component.scss
+++ b/src/app/EspacePatient/login-patient/login-patient.component.scss
@@ -19,6 +19,7 @@ body {
 }
 
 .container {
+  margin-top: 2rem;
   position: relative;
   width: 350px;
   height: 500px;
@@ -94,22 +95,24 @@ button {
   box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
   transition: 0.5s;
 }
+.btn2{
+  color: #1DA1F2;
+  margin-top: 20px;
+  background: transparent;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 900;
+  box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
+  transition: 0.5s;
+  border: 1px solid #1DA1F2;
+}
 
 button:hover {
   box-shadow: none;
 }
 
-a {
-  position: absolute;
-  font-size: 8px;
-  bottom: 4px;
-  right: 4px;
-  text-decoration: none;
-  color: black;
-  background: yellow;
-  border-radius: 10px;
-  padding: 2px;
-}
+
 
 h1 {
   position: absolute;
