--- a/src/app/composants/reset-password/reset-password.component.html
+++ b/src/app/composants/reset-password/reset-password.component.html
@@ -29,10 +29,10 @@
                 </form>
                 <hr>
                 <div class="text-center">
-                  <a class="small" href="register.html">Create an Account!</a>
+                  <a class="small" routerLink="/signPatient" routerLinkActive="active">Create an Account!</a>
                 </div>
                 <div class="text-center">
-                  <a class="small" href="login.html">Already have an account? Login!</a>
+                  <a class="small" routerLink="/loginPatient" routerLinkActive="active">Already have an account? Login!</a>
                 </div>
               </div>
             </div>
