--- a/src/app/Admin/login/login.component.scss
+++ b/src/app/Admin/login/login.component.scss
@@ -15,8 +15,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  margin-top: 3rem;
+  margin: 3rem auto;
+
 }
 
 .screen {
