--- a/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
+++ b/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
@@ -64,6 +64,8 @@
               </div>
 
             </form>
+            <a href="" style="color: #0066FF; margin-left: 8rem;"  routerLink="/loginPatient" routerLinkActive="active">vouz avez déja un compte</a>
+
           </div>
         </div>
 
@@ -71,7 +73,6 @@
     </div>
   </div>
 </div>
-
 
 <!--
   <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
