--- a/src/app/detail-profile/detail-profileA/Comptes/comptes-patients/comptes-patients.component.html
+++ b/src/app/detail-profile/detail-profileA/Comptes/comptes-patients/comptes-patients.component.html
@@ -1,1 +1,78 @@
-<p>comptes-patients works!</p>
+<div class="container col">
+  <h2>Listes des comptes Patients</h2>
+  <div class="row">
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Amita Bindar</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>Kinia</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/blank-profile-picture-973460_1280 .jpg">
+          </div>
+          <div class="row btn">
+            <button>Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Amita Bindar</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>Kinia</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/blank-profile-picture-973460_1280 .jpg">
+          </div>
+          <div class="row btn">
+            <button>Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Amita Bindar</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>Kinia</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/blank-profile-picture-973460_1280 .jpg">
+          </div>
+          <div class="row btn">
+            <button>Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+</div>
+
