--- a/src/app/servicePatient/chirurgies/chirurgies.component.html
+++ b/src/app/servicePatient/chirurgies/chirurgies.component.html
@@ -20,11 +20,15 @@
 
     </div>
     <h5>La chirurgie valvulaire 5 nuits / 6 jours</h5>
-    <div class="btn">
+    <div class="row col-md-12">
+      <div class="btn2 col-md-6">
+      <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+    </div>
+
+    <div class="btn col-md-6">
       <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
     </div>
-    <div class="btn2">
-      <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+
     </div>
   </div>
 
@@ -47,11 +51,15 @@
       </div>
     </div>
     <h5 style="margin-top:3rem">La chirurgie  ophtamologique 5 nuits / 6 jours</h5>
-    <div class="btn">
-      <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
-    </div>
-    <div class="btn2">
-      <button>Choisir un Médecin</button>
+    <div class="row col-md-12">
+      <div class="btn2 col-md-6">
+        <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+      </div>
+
+      <div class="btn col-md-6">
+        <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+      </div>
+
     </div>
   </div>
 
@@ -80,11 +88,15 @@
 
     </div>
     <h5 style="margin-top:6rem">La chirurgie orthopédique  3 nuits / 4 jours</h5>
-    <div class="btn">
-      <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
-    </div>
-    <div class="btn2">
-      <button >Choisir un Médecin</button>
+    <div class="row col-md-12">
+      <div class="btn2 col-md-6">
+        <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+      </div>
+
+      <div class="btn col-md-6">
+        <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+      </div>
+
     </div>
   </div>
 
@@ -106,11 +118,15 @@
       </div>
     </div>
     <h5 style="margin-top:3rem">La chirurgie digestive 6 nuits / 7 jours</h5>
-    <div class="btn">
-      <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
-    </div>
-    <div class="btn2">
-      <button>Choisir un Médecin</button>
+    <div class="row col-md-12">
+      <div class="btn2 col-md-6">
+        <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+      </div>
+
+      <div class="btn col-md-6">
+        <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+      </div>
+
     </div>
   </div>
 
@@ -130,11 +146,15 @@
 
     </div>
     <h5 style="margin-top:2rem">La chirurgie dentaire  3 nuits / 4 jours</h5>
-    <div class="btn">
-      <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
-    </div>
-    <div class="btn2">
-      <button>Choisir un Médecin</button>
+    <div class="row col-md-12">
+      <div class="btn2 col-md-6">
+        <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+      </div>
+
+      <div class="btn col-md-6">
+        <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+      </div>
+
     </div>
   </div>
 
@@ -155,12 +175,17 @@
       </div>
     </div>
     <h5 style="margin-top:3rem"> Chirurgie de l’obésité  2 nuits / 3 jours</h5>
-    <div class="btn">
-      <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+    <div class="row col-md-12">
+      <div class="btn2 col-md-6">
+        <button onclick="window.location.href ='chirurgieSelecionnee';">Choisir un Médecin</button>
+      </div>
+
+      <div class="btn col-md-6">
+        <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+      </div>
+
     </div>
-    <div class="btn2">
-      <button>Choisir un Médecin</button>
-    </div>
+
   </div>
 
 </div>
