--- a/src/app/Admin/profil-admin/profil-admin.component.html
+++ b/src/app/Admin/profil-admin/profil-admin.component.html
@@ -3,7 +3,7 @@
 <body id="page-top" >
 
 <!-- Page Wrapper -->
-<div id="wrapper" style="margin-top: 2rem">
+<div id="wrapper" style="">
 
   <!-- Sidebar -->
   <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -55,13 +55,13 @@
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
          aria-expanded="true" aria-controls="collapseUtilities">
         <i class="bi bi-envelope-fill" style="color: white"></i>
-        <span style="margin-left: 0.5rem">Messages</span>
+        <span style="margin-left: 0.5rem">Demande Rendez-vous</span>
       </a>
       <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
            data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Gérer messages</h6>
-          <a class="collapse-item" href="">Demande Rendez-vous</a>
+          <a class="collapse-item" href="rendez-vous">Demande Rendez-vous</a>
 
         </div>
       </div>
@@ -77,19 +77,22 @@
 
 
 
-    <!-- Nav Item - Charts -->
+
     <li class="nav-item">
-      <a class="nav-link" href="">
-        <i class="fas fa-fw fa-chart-area"></i>
-        <span>Charts</span></a>
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsethree"
+         aria-expanded="true" aria-controls="collapsethree">
+        <i class="bi bi-file-plus-fill" style="color: white"></i>
+        <span style="margin-left: 0.5rem">Chirurgie</span>
+      </a>
+      <div id="collapsethree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <h6 class="collapse-header">Chirurgie</h6>
+          <a class="collapse-item" href="ajoutchirurgie">Ajouter Chirurgie</a>
+          <a class="collapse-item" href="modifierchirurgie">Modifier Chirurgie</a>
+        </div>
+      </div>
     </li>
 
-    <!-- Nav Item - Tables -->
-    <li class="nav-item active">
-      <a class="nav-link" href="">
-        <i class="fas fa-fw fa-table"></i>
-        <span>Tables</span></a>
-    </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
