--- a/src/app/EspacePatient/profile-patient/profile-patient.component.html
+++ b/src/app/EspacePatient/profile-patient/profile-patient.component.html
@@ -73,8 +73,8 @@
       <ul class="navbar-nav">
 
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">
-            <i class="ni ni-tv-2 text-primary"></i> Dashboard
+          <a class="nav-link" href="javascript:void(0)" routerLink="/formuleRndv" routerLinkActive="active">
+            <i class="bi bi-calendar-plus-fill text-primary" ></i> Prendre rendez-vous
           </a>
         </li>
         <li class="nav-item">
