--- a/src/app/detail-profile/detail-profileA/Comptes/comptes-medecins/comptes-medecins.component.html
+++ b/src/app/detail-profile/detail-profileA/Comptes/comptes-medecins/comptes-medecins.component.html
@@ -1,1 +1,145 @@
-<p>comptes-medecins works!</p>
+<div class="container col">
+  <h2>Listes des comptes Médecins</h2>
+  <div class="row">
+    <div class="card one-card">
+    <div class="row">
+
+      <div class="col" style="margin-top: 1rem">
+        <h5> <i> <b>Docteur Ben Hassen</b></i></h5>
+        <h6>Chirurgies des valves cardiques</h6>
+        <address>tunis bardou 6185</address>
+      </div>
+
+      <div class="col">
+        <div class="image">
+           <img src="../assets/image/medcin4.jfif">
+        </div>
+        <div class="row btn">
+          <button routerLink="/detail-compte-Medecin" routerLinkActive="active">Voir détail</button>
+
+        </div>
+
+      </div>
+    </div>
+
+    </div>
+
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Docteur Ben Hassen</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>tunis bardou 6185</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/medcin4.jfif">
+          </div>
+          <div class="row btn">
+            <button routerLink="/detail-compte-Medecin" routerLinkActive="active">Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Docteur Ben Hassen</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>tunis bardou 6185</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/medcin4.jfif">
+          </div>
+          <div class="row btn">
+            <button routerLink="/detail-compte-Medecin" routerLinkActive="active">Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Docteur Ben Hassen</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>tunis bardou 6185</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/medcin4.jfif">
+          </div>
+          <div class="row btn">
+            <button>Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Docteur Ben Hassen</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>tunis bardou 6185</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/medcin4.jfif">
+          </div>
+          <div class="row btn">
+            <button>Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="card one-card">
+      <div class="row">
+
+        <div class="col" style="margin-top: 1rem">
+          <h5> <i> <b>Docteur Ben Hassen</b></i></h5>
+          <h6>Chirurgies des valves cardiques</h6>
+          <address>tunis bardou 6185</address>
+        </div>
+
+        <div class="col">
+          <div class="image">
+            <img src="../assets/image/medcin4.jfif">
+          </div>
+          <div class="row btn">
+            <button>Voir détail</button>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+</div>
