--- a/src/app/servicePatient/chirurgie-selecionnee/chirurgie-selecionnee.component.html
+++ b/src/app/servicePatient/chirurgie-selecionnee/chirurgie-selecionnee.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="col all-content">
   <h1>Les Meilleurs Chirurgiens Chirurgie des valves cardiaque  En Tunisie</h1>
-  <div class="desc">
+  <div class="col-md-6 desc">
 
   <p>
   Travaillant en collaboration avec les meilleurs chirurgiens plasticiens et généraux,
