--- a/src/app/servicePatient/chirurgie-selecionnee/chirurgie-selecionnee.component.scss
+++ b/src/app/servicePatient/chirurgie-selecionnee/chirurgie-selecionnee.component.scss
@@ -8,10 +8,11 @@
  // margin-left: 12rem;
   width: auto;
   height: 4rem;
-  margin-bottom: 3rem;
-  margin-top: 1rem;
+  margin: 2rem auto;
   color: #1a1f36;
   text-align: justify;
+
+
 }
 h1{
   margin-top: 2rem;
